# audioid

./: .gitignore  CMakeLists.txt  LICENSE.TXT  Makefile  README.md  build.cmd  run-cmake.cmd
js/: README.md  audioid.mjs  index.mjs  package-lock.json  package.json
js/public/: index.html
src/: CMakeLists.txt  audioid.c  audioid.h  main.c  minfft.h  miniaudio.c
